--- a/stacks/apps-200A.yml
+++ b/stacks/apps-200A.yml
@@ -37,6 +37,7 @@ Parameters:
   AmazonSesSmtpCredentialsGeneratorServiceToken: { Type: String }
   EchoServiceToken: { Type: String }
   CloudWatchAlarmTaggerServiceToken: { Type: String }
+  CloudWatchLogGroupTaggerServiceToken: { Type: String }
   EcsLaunchEndpointsAccessSecurityGroupId: { Type: AWS::EC2::SecurityGroup::Id }
   KmsEndpointAccessSecurityGroupId: { Type: AWS::EC2::SecurityGroup::Id }
   SharedEcsAsgInstanceSecurityGroupId: { Type: AWS::EC2::SecurityGroup::Id }
@@ -146,6 +147,7 @@ Resources:
         RootStackName: !Ref RootStackName
         RootStackId: !Ref RootStackId
         CloudWatchAlarmTaggerServiceToken: !Ref CloudWatchAlarmTaggerServiceToken
+        CloudWatchLogGroupTaggerServiceToken: !Ref CloudWatchLogGroupTaggerServiceToken
         CastleRdsPostgresqlEndpoint: !Ref CastleRdsPostgresqlEndpoint
         CastlePostgresUsername: !Ref CastlePostgresUsername
         CastlePostgresUserPassword: !Ref CastlePostgresUserPassword
@@ -182,6 +184,7 @@ Resources:
         CodeS3ObjectKey: !Ref DovetailCdnOriginRequestLambdaCodeS3ObjectKey
         ArrangerFunctionArn: !Ref DovetailCdnArrangerFunctionArn
         ArrangerWorkspaceBucketArn: !Ref DovetailCdnArrangerWorkspaceBucketArn
+        CloudWatchLogGroupTaggerServiceToken: !Ref CloudWatchLogGroupTaggerServiceToken
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
@@ -217,6 +220,7 @@ Resources:
         RootStackId: !Ref RootStackId
         AmazonSesSmtpCredentialsGeneratorServiceToken: !Ref AmazonSesSmtpCredentialsGeneratorServiceToken
         CloudWatchAlarmTaggerServiceToken: !Ref CloudWatchAlarmTaggerServiceToken
+        CloudWatchLogGroupTaggerServiceToken: !Ref CloudWatchLogGroupTaggerServiceToken
         S3SigningEndpointUrl: !Ref S3SigningEndpointUrl
         S3SigningAccessKeyId: !Ref S3SigningAccessKeyId
         SharedMemcachedEndpointAddress: !Ref SharedMemcachedEndpointAddress
@@ -256,6 +260,7 @@ Resources:
         RootStackId: !Ref RootStackId
         EchoServiceToken: !Ref EchoServiceToken
         CloudWatchAlarmTaggerServiceToken: !Ref CloudWatchAlarmTaggerServiceToken
+        CloudWatchLogGroupTaggerServiceToken: !Ref CloudWatchLogGroupTaggerServiceToken
         VpcPublicSubnet1Id: !Ref VpcPublicSubnet1Id
         VpcPublicSubnet2Id: !Ref VpcPublicSubnet2Id
         VpcPublicSubnet3Id: !Ref VpcPublicSubnet3Id
@@ -307,6 +312,7 @@ Resources:
         SharedMemcachedEndpointPort: !Ref SharedMemcachedEndpointPort
         EchoServiceToken: !Ref EchoServiceToken
         CloudWatchAlarmTaggerServiceToken: !Ref CloudWatchAlarmTaggerServiceToken
+        CloudWatchLogGroupTaggerServiceToken: !Ref CloudWatchLogGroupTaggerServiceToken
         EcsLaunchEndpointsAccessSecurityGroupId: !Ref EcsLaunchEndpointsAccessSecurityGroupId
         KmsEndpointAccessSecurityGroupId: !Ref KmsEndpointAccessSecurityGroupId
         SharedAuroraMysqlEndpoint: !Ref SharedAuroraMysqlEndpoint
@@ -342,6 +348,7 @@ Resources:
         RootStackName: !Ref RootStackName
         RootStackId: !Ref RootStackId
         CloudWatchAlarmTaggerServiceToken: !Ref CloudWatchAlarmTaggerServiceToken
+        CloudWatchLogGroupTaggerServiceToken: !Ref CloudWatchLogGroupTaggerServiceToken
         S3SigningUserName: !Ref S3SigningUserName
         S3SigningEndpointUrl: !Ref S3SigningEndpointUrl
         S3SigningAccessKeyId: !Ref S3SigningAccessKeyId
@@ -384,6 +391,7 @@ Resources:
         RootStackName: !Ref RootStackName
         RootStackId: !Ref RootStackId
         CloudWatchAlarmTaggerServiceToken: !Ref CloudWatchAlarmTaggerServiceToken
+        CloudWatchLogGroupTaggerServiceToken: !Ref CloudWatchLogGroupTaggerServiceToken
         SharedAuroraPostgresqlEndpoint: !Ref SharedAuroraPostgresqlEndpoint
         SharedAuroraPostgresqlPort: !Ref SharedAuroraPostgresqlPort
         PorterJobExecutionSnsTopicArn: !Ref PorterJobExecutionSnsTopicArn
