--- a/stacks/apps/proxy.yml
+++ b/stacks/apps/proxy.yml
@@ -14,6 +14,7 @@ Parameters:
   RootStackName: { Type: String }
   RootStackId: { Type: String }
   CloudWatchAlarmTaggerServiceToken: { Type: String }
+  CloudWatchLogGroupTaggerServiceToken: { Type: String }
   CodeS3Bucket: { Type: String }
   CodeS3ObjectKey: { Type: String }
   CorporateHostname: { Type: String }
@@ -80,6 +81,11 @@ Resources:
     Properties:
       LogGroupName: !Sub /aws/lambda/${ProxyHttpLambdaFunction}
       RetentionInDays: 60
+  ProxyHttpLambdaLogGroupTags:
+    Type: Custom::CloudWatchLogGroupTags
+    Properties:
+      ServiceToken: !Ref CloudWatchLogGroupTaggerServiceToken
+      LogGroupName: !Ref ProxyHttpLambdaLogGroup
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
