--- a/stacks/apps/radiotopia-tower.yml
+++ b/stacks/apps/radiotopia-tower.yml
@@ -14,6 +14,7 @@ Parameters:
   RootStackName: { Type: String }
   RootStackId: { Type: String }
   CloudWatchAlarmTaggerServiceToken: { Type: String }
+  CloudWatchLogGroupTaggerServiceToken: { Type: String }
   CodeS3Bucket: { Type: String }
   CodeS3ObjectKey: { Type: String }
 
@@ -155,6 +156,11 @@ Resources:
     Properties:
       LogGroupName: !Sub /aws/lambda/${TowerEndpointFunction}
       RetentionInDays: 14
+  TowerEndpointFunctionLogGroupTags:
+    Type: Custom::CloudWatchLogGroupTags
+    Properties:
+      ServiceToken: !Ref CloudWatchLogGroupTaggerServiceToken
+      LogGroupName: !Ref TowerEndpointFunctionLogGroup
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
