--- a/stacks/apps/s3-signing.yml
+++ b/stacks/apps/s3-signing.yml
@@ -13,6 +13,7 @@ Parameters:
   RootStackName: { Type: String }
   RootStackId: { Type: String }
   CloudWatchAlarmTaggerServiceToken: { Type: String }
+  CloudWatchLogGroupTaggerServiceToken: { Type: String }
   CodeS3Bucket: { Type: String }
   CodeS3ObjectKey: { Type: String }
   MediajointS3BucketArn: { Type: String }
@@ -78,6 +79,11 @@ Resources:
     Properties:
       LogGroupName: !Sub /aws/lambda/${UploadHttpLambdaFunction}
       RetentionInDays: 60
+  UploadHttpLambdaLogGroupTags:
+    Type: Custom::CloudWatchLogGroupTags
+    Properties:
+      ServiceToken: !Ref CloudWatchLogGroupTaggerServiceToken
+      LogGroupName: !Ref UploadHttpLambdaLogGroup
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
