--- a/stacks/apps/theworld-search.yml
+++ b/stacks/apps/theworld-search.yml
@@ -21,6 +21,7 @@ Parameters:
   RootStackName: { Type: String }
   RootStackId: { Type: String }
   CloudWatchAlarmTaggerServiceToken: { Type: String }
+  CloudWatchLogGroupTaggerServiceToken: { Type: String }
   CodeS3Bucket: { Type: String }
   CodeS3ObjectKey: { Type: String }
   TheWorldSearchGoogleCustomSearchEngineId: { Type: String }
@@ -182,6 +183,11 @@ Resources:
     Properties:
       LogGroupName: !Sub /aws/lambda/${SearchEndpointFunction}
       RetentionInDays: 14
+  SearchEndpointFunctionLogGroupTags:
+    Type: Custom::CloudWatchLogGroupTags
+    Properties:
+      ServiceToken: !Ref CloudWatchLogGroupTaggerServiceToken
+      LogGroupName: !Ref SearchEndpointFunctionLogGroup
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
