--- a/stacks/container-apps/dovetail.prx.org.yml
+++ b/stacks/container-apps/dovetail.prx.org.yml
@@ -41,6 +41,7 @@ Parameters:
   ContainerCpu:
     Type: String
   NewRelicApiKeyPrxLite: { Type: String }
+  CloudWatchLogGroupTaggerServiceToken: { Type: String }
   # Dovetail ###################################################################
   DovetailEcrImageTag:
     Type: String
@@ -427,6 +428,11 @@ Resources:
     Type: "AWS::Logs::LogGroup"
     Properties:
       RetentionInDays: 14
+  DovetailLogGroupTags:
+    Type: Custom::CloudWatchLogGroupTags
+    Properties:
+      ServiceToken: !Ref CloudWatchLogGroupTaggerServiceToken
+      LogGroupName: !Ref DovetailLogGroup
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
