--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -473,6 +473,7 @@ Resources:
         SharedRedisReplicationGroupEndpointAddress: !GetAtt SharedRedisStack.Outputs.ReplicationGroupEndpointAddress
         SharedRedisReplicationGroupEndpointPort: !GetAtt SharedRedisStack.Outputs.ReplicationGroupEndpointPort
         NewRelicApiKeyPrxLite: !Ref NewRelicApiKeyPrxLite
+        CloudWatchLogGroupTaggerServiceToken: !GetAtt CustomResourcesStack.Outputs.CloudWatchLogGroupTaggerServiceToken
       Tags:
         - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
@@ -537,6 +538,7 @@ Resources:
         RootStackId: !GetAtt Constants.RootStackId
         TemplateUrlPrefix: !Sub ${Constants.TemplateUrlBase}/stacks/shared-vpc
         CloudFormationNotificationArn: !GetAtt Constants.CloudFormationNotificationArn
+        CloudWatchLogGroupTaggerServiceToken: !GetAtt CustomResourcesStack.Outputs.CloudWatchLogGroupTaggerServiceToken
         Ec2ResourceTaggerServiceToken: !GetAtt CustomResourcesStack.Outputs.Ec2ResourceTaggerServiceToken
         SharedVpcCidrBlock: !Ref SharedVpcCidrBlock
       Tags:
@@ -629,6 +631,7 @@ Resources:
         RootStackId: !GetAtt Constants.RootStackName
         SlackMessageRelaySnsTopicArn:
           Fn::ImportValue: !Sub ${NotificationsStackName}-SlackMessageRelaySnsTopicArn
+        CloudWatchLogGroupTaggerServiceToken: !GetAtt CustomResourcesStack.Outputs.CloudWatchLogGroupTaggerServiceToken
         KeyPairName: !Ref AsgKeyPairName
         AuthorizedKeys: !Join [",", !Ref AuthorizedKeys]
         VpcPublicSubnet1Id: !GetAtt SharedVpcStack.Outputs.PublicSubnet1Id
@@ -786,6 +789,7 @@ Resources:
         SharedRedisReplicationGroupEndpointPort: !GetAtt SharedRedisStack.Outputs.ReplicationGroupEndpointPort
         AmazonSesSmtpCredentialsGeneratorServiceToken: !GetAtt CustomResourcesStack.Outputs.AmazonSesSmtpCredentialsGeneratorServiceToken
         CloudWatchAlarmTaggerServiceToken: !GetAtt CustomResourcesStack.Outputs.CloudWatchAlarmTaggerServiceToken
+        CloudWatchLogGroupTaggerServiceToken: !GetAtt CustomResourcesStack.Outputs.CloudWatchLogGroupTaggerServiceToken
         SharedEcsAsgInstanceSecurityGroupId: !GetAtt SharedEcsAsgSecurityGroupStack.Outputs.InstanceSecurityGroupId
         DeploymentPackageBucketName: !GetAtt Constants.DeploymentPackageBucketName
         BetaHostname: !GetAtt Constants.BetaHostname
@@ -887,6 +891,7 @@ Resources:
         AmazonSesSmtpCredentialsGeneratorServiceToken: !GetAtt CustomResourcesStack.Outputs.AmazonSesSmtpCredentialsGeneratorServiceToken
         EchoServiceToken: !GetAtt CustomResourcesStack.Outputs.EchoServiceToken
         CloudWatchAlarmTaggerServiceToken: !GetAtt CustomResourcesStack.Outputs.CloudWatchAlarmTaggerServiceToken
+        CloudWatchLogGroupTaggerServiceToken: !GetAtt CustomResourcesStack.Outputs.CloudWatchLogGroupTaggerServiceToken
         EcsLaunchEndpointsAccessSecurityGroupId: !GetAtt SharedVpcStack.Outputs.EcsLaunchEndpointsAccessSecurityGroupId
         KmsEndpointAccessSecurityGroupId: !GetAtt SharedVpcStack.Outputs.KmsEndpointAccessSecurityGroupId
         SharedEcsAsgInstanceSecurityGroupId: !GetAtt SharedEcsAsgSecurityGroupStack.Outputs.InstanceSecurityGroupId
@@ -987,6 +992,7 @@ Resources:
         DeploymentPackageBucketName: !GetAtt Constants.DeploymentPackageBucketName
         EchoServiceToken: !GetAtt CustomResourcesStack.Outputs.EchoServiceToken
         CloudWatchAlarmTaggerServiceToken: !GetAtt CustomResourcesStack.Outputs.CloudWatchAlarmTaggerServiceToken
+        CloudWatchLogGroupTaggerServiceToken: !GetAtt CustomResourcesStack.Outputs.CloudWatchLogGroupTaggerServiceToken
         SharedEcsAsgInstanceSecurityGroupId: !GetAtt SharedEcsAsgSecurityGroupStack.Outputs.InstanceSecurityGroupId
         SharedRedisReplicationGroupEndpointAddress: !GetAtt SharedRedisStack.Outputs.ReplicationGroupEndpointAddress
         SharedRedisReplicationGroupEndpointPort: !GetAtt SharedRedisStack.Outputs.ReplicationGroupEndpointPort
