--- a/dns/theworld.org-hosted-zone.yml
+++ b/dns/theworld.org-hosted-zone.yml
@@ -19,7 +19,7 @@ Resources:
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
         - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
         - { Key: prx:ops:environment, Value: Production }
-        - { Key: prx:dev:Family, Value: The World }
+        - { Key: prx:dev:family, Value: The World }
         - { Key: prx:dev:application, Value: theworld.org }
       Name: !Ref Domain
 
