Add stack output

--- a/devops/chat-ops/cloudwatch-alarms/template.yml
+++ b/devops/chat-ops/cloudwatch-alarms/template.yml
@@ -85,3 +85,7 @@ Resources:
     Properties:
       LogGroupName: !Sub /aws/lambda/${CloudWatchAlarmsFunction}
       RetentionInDays: 14
+
+Outputs:
+  CloudWatchAlarmsEventBusArn:
+    Value: !GetAtt CloudWatchAlarmsEventBus.Arn
