Add stack output

--- a/devops/chat-ops/slack-app/template.yml
+++ b/devops/chat-ops/slack-app/template.yml
@@ -246,3 +246,7 @@ Resources:
         - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
         - { Key: prx:ops:environment, Value: Production }
         - { Key: prx:dev:application, Value: DevOps }
+
+Outputs:
+  SlackMessageRelaySnsTopicArn:
+    Value: !Ref SlackMessageRelaySnsTopic
