Add devops pipeline notifications

--- a/devops/chat-ops/slack-app/template.yml
+++ b/devops/chat-ops/slack-app/template.yml
@@ -10,6 +10,8 @@ Parameters:
     Type: String
   LegacySlackMessageRelayTopicArn:
     Type: String
+  PipelineStateChangeNotificationsTopicArn:
+    Type: String
   AwsOrganizationCrossAccountSharingRoleArn:
     Type: String
     Description: >-
@@ -167,6 +169,10 @@ Resources:
           Properties:
             Region: us-east-1
             Topic: !Ref LegacySlackMessageRelayTopicArn
+          Type: SNS
+        PipelineEventsRelay:
+          Properties:
+            Topic: !Ref PipelineStateChangeNotificationsTopicArn
           Type: SNS
       Handler: index.handler
       Layers:
