--- a/devops/porter-cd-pipeline.yml
+++ b/devops/porter-cd-pipeline.yml
@@ -810,7 +810,7 @@ Resources:
   PipelineStateChangeFunction:
     Type: AWS::Serverless::Function
     Properties:
-      Description: Sends a message when DevOps pipeline completes
+      Description: Sends a message when Porter pipeline completes
       Environment:
         Variables:
           SLACK_MESSAGE_RELAY_TOPIC_ARN: !Ref SlackMessageRelayTopicArn
