Fix missing variable

--- a/devops/devops-cd-pipeline.yml
+++ b/devops/devops-cd-pipeline.yml
@@ -394,6 +394,9 @@ Resources:
                 - Name: SamBuildArtifact
               RunOrder: 2
 
+  # This is needed because there's no way to reference the SNS topic that's
+  # created in the Slack app stack from here, so this topic is added to the
+  # Slack app as one that it listens to
   PipelineStateChangeNotificationsTopic:
     Type: AWS::SNS::Topic
     Properties:
