--- a/ci/template.yml
+++ b/ci/template.yml
@@ -182,6 +182,12 @@ Resources:
       PolicyName: !Sub ${AWS::StackName}-CiCodeBuildLogsIamPolicy
       Roles:
         - !Ref CiCodeBuildIamRole
+  CiCodeBuildSourceCredential:
+    Type: AWS::CodeBuild::SourceCredential
+    Properties:
+      AuthType: PERSONAL_ACCESS_TOKEN
+      ServerType: GITHUB
+      Token: !Ref GitHubToken
   CiCodeBuildProject:
     Type: AWS::CodeBuild::Project
     Properties:
@@ -204,8 +210,12 @@ Resources:
       Name: !Sub ${AWS::StackName}-Runner2
       ServiceRole: !GetAtt CiCodeBuildIamRole.Arn
       Source:
-        Location: !Join ["", ["arn:aws:s3:::", !Ref CiCodeBuildSourceArchiveBucket, "/", !FindInMap [Shared, SourceArchives, Key]]]
-        Type: S3
+        Auth:
+          Resource: !Ref CiCodeBuildSourceCredential
+          Type: OAUTH
+        GitCloneDepth: 1
+        Location: https://github.com/PRX/Infrastructure.git
+        Type: GITHUB
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
